--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
             <tr>
                 <th> <label for="fname" > Name <span class="required">*</span>: </label> </th>
                 <td> <input type="text" name = "fname" class="UpperCase" required></td>
-                </tr>
+            </tr>
+
+            <tr>
+                <th> <label for="fname" > Phone <span class="required">*</span>: </label> </th>
+                <td> <input type="number" name = "fname" class="UpperCase" required></td>
+            </tr>
+
+            <tr>
+                <th> <label for="fname" > Disabled <span class="required">*</span>: </label> </th>
+                <td> <input type="text" name = "username"  disabled placeholder="disabled"></td>
+            </tr>
+
         </table>
 
        
