--- a/index.html
+++ b/index.html
@@ -26,9 +26,22 @@
             </tr>
 
             <tr>
+                <th> <label for="fage" > Phone <span class="required">*</span>: </label> </th>
+                <td><input type="text" name="phone" pattern="[0-9]{10}" placeholder="Enter a 10-digit phone number" required></td>
+            </tr>
+
+
+            <tr>
                 <th> <label for="fname" > Disabled <span class="required">*</span>: </label> </th>
                 <td> <input type="text" name = "username"  disabled placeholder="disabled"></td>
             </tr>
+
+            <tr>
+                <th> <label for="fage" > Disabled <span class="required">*</span>: </label> </th>
+                <td> <input type="number" name = "userage"   placeholder="age" min="0" max="120"></td>
+            </tr>
+
+            
 
         </table>
 
