--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                 <td> <input type="email" name="falt_email" placeholder="Altervative Email" ></td>
             </tr>
 
+
+            <tr>
+                <th> <label for="" >DOB<span class="required">*</span>: </label> </th>
+                <td> <input type="date" name="" placeholder="Date of Birth" ></td>
+            </tr>
+
+
             
 
         </table>
