--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
         </tr>
 
 
+        <tr>
+            <th>
+                <label for="address"> Address </label>
+
+            </th>
+            <td>
+               <textarea name="" id=""></textarea>
+            </td>
+        </tr>
+
+
             
 
         </table>
