address_rows_cols

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             </th>
             <td>
-               <textarea name="" id=""></textarea>
+               <textarea name="" id="" rows="5" cols="50"></textarea>
             </td>
         </tr>
 
